# video-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: AudioReader.cpp.7478EE411C469199.idx  AudioReader.h.C8336AE2699CF89B.idx  UI.cpp.307846F46D68B99A.idx  UI.h.7020D02CBB278B59.idx  UIRenderer.cpp.99759EAB550A4601.idx  UIRenderer.h.5448F6DCB73A4E2E.idx  VideoReader.cpp.DF92120FBA2F39D3.idx  VideoReader.h.57ACA08828A7B4BB.idx  VideoRenderer.cpp.EC09D4DF7E8ED33C.idx  VideoRenderer.h.3FF967518250D97D.idx  _fixes.hpp.7732B08418742AE2.idx  _vectorize.hpp.420C6D3B3FFA8525.idx  adler32.c.275198A0F9DF7DA3.idx  afadjust.c.9FF16302BC4A4BCA.idx  afadjust.h.B4A44F1A7B5A9117.idx  afblue.c.4E3D1A511DF5A8BA.idx  afblue.h.83A209A872BCB170.idx  afcjk.c.63ECA93EFBB85FD1.idx  afcjk.h.5D42C116FBC10725.idx  afcover.h.1405050B5B492106.idx  afdummy.c.4BA9944D092958BE.idx  afdummy.h.F61FCFEDFC93926C.idx  aferrors.h.FC2A20DD5BF4C55C.idx  afglobal.c.FD6059E94F3A342D.idx  afglobal.h.80285FD92A2E24C5.idx  afgsub.c.44FDFF4E288BA2DA.idx  afhints.c.3E4D9CE11E027ACC.idx  afhints.h.28391B1529670E1E.idx  afindic.c.B81376BB0C66BE20.idx  afindic.h.747410D5F1587FCA.idx  aflatin.c.936E49D09F45E05E.idx  aflatin.h.C8E919D04CFC085B.idx  afloader.c.67859C6315D638CC.idx  afloader.h.043CAE970E2B327E.idx  afmodule.c.849CF24F73E729C2.idx  afmodule.h.117F410C7E52786C.idx  afmparse.c.3E3ABF726C5A0705.idx  afmparse.h.82F28753142EF1A3.idx  afranges.c.658ADD7656F8EC31.idx  afranges.h.D3DD4E66500D0258.idx  (+623 more)
gui/: UI.cpp  UI.h  UIRenderer.cpp  UIRenderer.h
include/: AudioReader.h  VideoReader.h  VideoRenderer.h
src/: AudioReader.cpp  VideoReader.cpp  VideoRenderer.cpp  main.cpp
